Closed Bug 997336 Opened 10 years ago Closed 10 years ago

Air Mozilla (& vid.ly) videos are mostly/entirely black, sometimes with flashing content

Categories

(Core :: Graphics, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla32
Tracking Status
firefox28 --- unaffected
firefox29 --- unaffected
firefox30 --- unaffected
firefox31 + verified
firefox32 --- verified

People

(Reporter: dholbert, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

STR:
 1. Load https://air.mozilla.org/firefox-australis/
 2. Hit play button.

ACTUAL RESULTS:
Video is mostly/entirely black, though it paints some or all of the correct video content if you click it (to pause it), or hover the textbox at the upper-right of the page (which forces a repaint)


ALTERNATE STR:
 1. Load https://vid.ly/embeded.html?link=0h4y0y (the iframe embedded at ^)
 2. Click play

ALTERNATE STR's ACTUAL RESULTS:
The top ~20% of the playing video area is black, and other graphical corruption is visible (e.g. the controls flicker wildly when I hover / un-hover the video)


Mozilla/5.0 (X11; Linux x86_64; rv:31.0) Gecko/20100101 Firefox/31.0
31.0a1 (2014-04-16)
Regression range from mozregression:
{
Last good revision: 1417d180a1d8 (2014-04-01)
First bad revision: 4941a2ac0786 (2014-04-02)
Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1417d180a1d8&tochange=4941a2ac0786
}

...and then after it narrows things further using use inbound builds:
{
Last good revision: 35180f110e44
First bad revision: 561b9329d832
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=35180f110e44&tochange=561b9329d832
}

That inbound regression range has no commits that mention "video", "media", or "codec", but it does have a substantial graphics change: Bug 989858's patch-stack for "Convert BasicLayers to Moz2D".

That looks like the most likely thing to have regressed this, at first glance. Hence, filing as graphics bug, and marking as blocking bug 989858.
Keywords: regression
Note: I'm hitting this on Ubuntu 14.04 final beta, on my desktop work machine (a Dell Precision T1600), if that matters.

about:support graphics info:
{
Graphics
Adapter Description	nouveau -- Gallium 0.4 on NVC1
Device ID	Gallium 0.4 on NVC1
Driver Version	3.0 Mesa 10.1.0
GPU Accelerated Windows	0/1 Basic
Vendor ID	nouveau
WebGL Renderer	nouveau -- Gallium 0.4 on NVC1
windowLayerManagerRemote	false
AzureCanvasBackend	cairo
AzureContentBackend	cairo
AzureFallbackCanvasBackend	none
AzureSkiaAccelerated	0
}
I also hit this on my laptop work machine (Thinkpad W530), also running Ubuntu 14.04.
about:support graphics info from that machine:
{
Adapter Description	Intel Open Source Technology Center -- Mesa DRI Intel(R) Ivybridge Mobile
Device ID	Mesa DRI Intel(R) Ivybridge Mobile
Driver Version	3.0 Mesa 10.1.0
GPU Accelerated Windows	0/1 Basic
Vendor ID	Intel Open Source Technology Center
WebGL Renderer	Intel Open Source Technology Center -- Mesa DRI Intel(R) Ivybridge Mobile
windowLayerManagerRemote	false
AzureCanvasBackend	cairo
AzureContentBackend	cairo
AzureFallbackCanvasBackend	none
AzureSkiaAccelerated	0
}

Couldn't reproduce after rebooting in Windows, though, so seems likely to be linux-only.
Confirmed (w/ local targeted builds) that this was introduced by bug 989858's push.

- mozilla-central changeset d67bceffcb62 is OK (parent of bug 989858)
- mozilla-central changeset f94c69dfca91 is broken (last cset of bug 989858)
Matt, any chance you can take this, or suggest someone else who could do so?  It'd be nice to get this regression addressed before 31 goes to Aurora in ~2 weeks.
Flags: needinfo?(matt.woodrow)
Is this still an issue? I believe I fixed this in another bug which I can't find right now.
Flags: needinfo?(matt.woodrow)
Nope, still broken for me (using my desktop at home, for my own reference), using the STR from comment 0.
 32.0a1 (2014-05-07)
 Mozilla/5.0 (X11; Linux x86_64; rv:32.0) Gecko/20100101 Firefox/32.0
Once we get PushLayer/PopLayer for Moz2D then this can go away.
Attachment #8419918 - Flags: review?(bas)
Attachment #8419918 - Flags: review?(bas) → review+
https://hg.mozilla.org/mozilla-central/rev/ab35e36bf2b5
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Depends on: 1008965
Great. That works with Mozilla/5.0 (X11; Linux x86_64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140513030201 CSet: 4b6d63b05a0a

Matt, can you please ask for backporting the patch to Aurora? It would be great to have it fixed for that version too. Thanks.
Assignee: nobody → matt.woodrow
Status: RESOLVED → VERIFIED
Depends on: 1009627
Can we haz an aurora backport, please? :)
Flags: needinfo?(matt.woodrow)
Comment on attachment 8419918 [details] [diff] [review]
Account for device offset in mask transform

[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 989858
User impact if declined: Broken html5 video that have rounded edges when h/w acceleration is disabled.
Testing completed (on m-c, etc.): Been on m-c for a few weeks.
Risk to taking this patch (and alternatives if risky): Low risk
String or IDL/UUID changes made by this patch: None.
Attachment #8419918 - Flags: approval-mozilla-aurora?
Flags: needinfo?(matt.woodrow)
Attachment #8419918 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Works great with Mozilla/5.0 (X11; Linux x86_64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140522004003 CSet: 5239876497e2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: