Bug 997336 - Account for the DrawTarget 'device offset' when drawing layers with a mask. r=Bas